Added SCRUD for npc
